--- a/client/src/App.css
+++ b/client/src/App.css
@@ -13,6 +13,9 @@ html {
 .topicondisplay {
   display: flex;
   justify-content: space-between;
+  margin-right: 20px;
+  margin-left: 20px;
+  font-size: 1.5em;
 }
 .logo {
   height: 12vh;
@@ -140,7 +143,7 @@ p.search {
 }
 
 .iconstyle {
-  font-size: large;
+  font-size: 1.5em;
   margin-right: 10px;
   color: black;
 }
