changed drawer and menuitems to receive props, log out comp

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -125,6 +125,10 @@ p.search {
   align-self: center;
   text-align: left;
 }
+
+.profileinfo img {
+  border-radius: 50%;
+}
 .otherinfo {
   align-self: center;
   text-align: right;
