--- a/client/src/App.css
+++ b/client/src/App.css
@@ -59,7 +59,7 @@ h3 {
 
 .browsing {
   background-color: rgba(255,255,255, 0.5);
-  border-radius: 0.5%;
+  border-radius: 5px;
   width: 40%;
   max-height: 100px;
   margin: 0 auto;
@@ -118,17 +118,35 @@ footer img {
 
 /* Cities Page display styling */
 
+.citiesholder {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  width: 90%;
+  margin: 0 auto
+}
+
 .cityname {
   text-align: center;
   text-transform: uppercase;
 }
 
-.citiesfetch {
-  padding: 10px 20px;
-  margin: 10px;
-  border: 1px solid gray;
-  box-shadow: 5px 5px 2px darkgrey;
+.city {
+  width: 300px;
+  height: 200px;
+  padding: 5px 7px;
+  margin: 15px;
   text-align: center;
+  border-radius: 20px;
+  box-shadow: 5px 5px 10px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.22);
+  cursor: pointer;
+}
+
+.city img {
+  width: 300px;
+  height: 200px;
+  border-radius: 20px;
+
 }
 
 div.citiesfetch:hover {
@@ -136,7 +154,7 @@ div.citiesfetch:hover {
 }
 
 input {
-  width: 80%;
+  width: 60%;
   border: 1px solid gray;
   padding: 5px;
   margin-bottom: 10px;
